objects/Product__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Category_ID__c</fullName>
        <externalDeveloperName>categoryID</externalDeveloperName>
        <label>Category ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued__c</fullName>
        <externalDeveloperName>discontinued</externalDeveloperName>
        <label>Discontinued</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <externalDeveloperName>product</externalDeveloperName>
        <label>Product ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <externalDeveloperName>productName</externalDeveloperName>
        <label>Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_Unit__c</fullName>
        <externalDeveloperName>quantityPerUnit</externalDeveloperName>
        <label>Quantity Per Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reorder_Level__c</fullName>
        <externalDeveloperName>ReorderLevel</externalDeveloperName>
        <label>Reorder Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <externalDeveloperName>supplierID</externalDeveloperName>
        <label>Supplier</label>
        <length>50</length>
        <referenceTo>Supplier__x</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_in_Stock__c</fullName>
        <externalDeveloperName>UnitsInStock</externalDeveloperName>
        <label>Units in Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_on_Order__c</fullName>
        <externalDeveloperName>UnitsOnOrder</externalDeveloperName>
        <label>Units on Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product_Name__c</columns>
        <columns>Product_ID__c</columns>
        <columns>ExternalId</columns>
        <columns>Supplier__c</columns>
        <columns>Discontinued__c</columns>
        <columns>Quantity_Per_Unit__c</columns>
        <columns>Category_ID__c</columns>
        <columns>Units_on_Order__c</columns>
        <columns>Units_in_Stock__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Reorder_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Products</pluralLabel>
</CustomObject>